// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={true}
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={true}
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={true}
      flat={false}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <ButtonWithStyles
        className="ui-shared__button css-10t88aj  ui-shared__ripple-button"
        disabled={true}
        testId="Button"
        type="button"
      >
        <Button
          className="tss-18hbw04-Button-root ui-shared__button css-10t88aj ui-shared__ripple-button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          disabled={true}
          onClick={null}
          testId="Button"
          type="button"
        >
          <button
            className="tss-18hbw04-Button-root ui-shared__button css-10t88aj ui-shared__ripple-button tss-18hbw04-Button-root ui-shared__button css-10t88aj ui-shared__ripple-button common__button"
            classes={
              {
                "root": "tss-18hbw04-Button-root",
              }
            }
            data-test-id="Button"
            disabled={true}
            onClick={null}
            type="button"
          >
            <div
              className="css-kwqjom"
            >
              Press me
            </div>
          </button>
        </Button>
      </ButtonWithStyles>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="primary"
      wrapContent={false}
    >
      <ButtonWithStyles
        className="ui-shared__button css-cifbew  ui-shared__ripple-button"
        testId="Button"
        type="button"
      >
        <Button
          className="tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          disabled={false}
          onClick={null}
          testId="Button"
          type="button"
        >
          <button
            className="tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button common__button"
            classes={
              {
                "root": "tss-18hbw04-Button-root",
              }
            }
            data-test-id="Button"
            disabled={false}
            onClick={null}
            type="button"
          >
            <RippleWithStyles
              className="tss-p1t6ie-RippleButton-contentWrapper "
              fill={true}
              overflow={true}
              size={null}
            >
              <Ripple
                className="tss-p1t6ie-RippleButton-contentWrapper "
                classes={
                  {
                    "container": "tss-1dfkr3n-Ripple-container",
                  }
                }
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </RippleWithStyles>
          </button>
        </Button>
      </ButtonWithStyles>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="primary"
      wrapContent={false}
    >
      <ButtonWithStyles
        className="ui-shared__button css-cifbew  ui-shared__ripple-button"
        testId="Button"
        type="button"
      >
        <Button
          className="tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          disabled={false}
          onClick={null}
          testId="Button"
          type="button"
        >
          <button
            className="tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button tss-18hbw04-Button-root ui-shared__button css-cifbew ui-shared__ripple-button common__button"
            classes={
              {
                "root": "tss-18hbw04-Button-root",
              }
            }
            data-test-id="Button"
            disabled={false}
            onClick={null}
            type="button"
          >
            <RippleWithStyles
              className="tss-p1t6ie-RippleButton-contentWrapper "
              fill={true}
              overflow={true}
              size={null}
            >
              <Ripple
                className="tss-p1t6ie-RippleButton-contentWrapper "
                classes={
                  {
                    "container": "tss-1dfkr3n-Ripple-container",
                  }
                }
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </RippleWithStyles>
          </button>
        </Button>
      </ButtonWithStyles>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="regular"
      wrapContent={false}
    >
      <ButtonWithStyles
        className="ui-shared__button css-1a50m4j  ui-shared__ripple-button"
        testId="Button"
        type="button"
      >
        <Button
          className="tss-18hbw04-Button-root ui-shared__button css-1a50m4j ui-shared__ripple-button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          disabled={false}
          onClick={null}
          testId="Button"
          type="button"
        >
          <button
            className="tss-18hbw04-Button-root ui-shared__button css-1a50m4j ui-shared__ripple-button tss-18hbw04-Button-root ui-shared__button css-1a50m4j ui-shared__ripple-button common__button"
            classes={
              {
                "root": "tss-18hbw04-Button-root",
              }
            }
            data-test-id="Button"
            disabled={false}
            onClick={null}
            type="button"
          >
            <RippleWithStyles
              className="tss-p1t6ie-RippleButton-contentWrapper "
              fill={true}
              overflow={true}
              size={null}
            >
              <Ripple
                className="tss-p1t6ie-RippleButton-contentWrapper "
                classes={
                  {
                    "container": "tss-1dfkr3n-Ripple-container",
                  }
                }
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </RippleWithStyles>
          </button>
        </Button>
      </ButtonWithStyles>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  flat={false}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="secondary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      flat={false}
      testId="Button"
      type="secondary"
      wrapContent={false}
    >
      <ButtonWithStyles
        className="ui-shared__button css-mk0dpu  ui-shared__ripple-button"
        testId="Button"
        type="button"
      >
        <Button
          className="tss-18hbw04-Button-root ui-shared__button css-mk0dpu ui-shared__ripple-button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          disabled={false}
          onClick={null}
          testId="Button"
          type="button"
        >
          <button
            className="tss-18hbw04-Button-root ui-shared__button css-mk0dpu ui-shared__ripple-button tss-18hbw04-Button-root ui-shared__button css-mk0dpu ui-shared__ripple-button common__button"
            classes={
              {
                "root": "tss-18hbw04-Button-root",
              }
            }
            data-test-id="Button"
            disabled={false}
            onClick={null}
            type="button"
          >
            <RippleWithStyles
              className="tss-p1t6ie-RippleButton-contentWrapper "
              fill={true}
              overflow={true}
              size={null}
            >
              <Ripple
                className="tss-p1t6ie-RippleButton-contentWrapper "
                classes={
                  {
                    "container": "tss-1dfkr3n-Ripple-container",
                  }
                }
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  Press me
                </div>
              </Ripple>
            </RippleWithStyles>
          </button>
        </Button>
      </ButtonWithStyles>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;
